--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,15 @@
-.row {
-  width: 992px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.debug [class *= "col-"] {
+  border: 1px solid black;
+  background-color: lightpink;
 }
 
 /* BLOCCO LEZIONI */
-#lezioni .row>.left,
-#lezioni .row>.right {
-  width: 50%;
-  float: left;
-}
-
 #lezioni .row img {
   /* per centrare orizzontalmente */
   display: block;
@@ -21,14 +19,6 @@
 
 #lezioni {
   text-align: center;
-}
-
-/* BLOCCO STEPS */
-#steps .row>.left,
-#steps .row>.central,
-#steps .row>.right {
-  float: left;
-  width: 33%;
 }
 
 #steps {
@@ -43,31 +33,31 @@
 #why .row>.first,
 #why .row>.second,
 #why .row>.third {
-  width: 100%;
-  margin-top: 80px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #why .row img {
   background-color: #428bca;
   border-radius: 50%;
-  padding: 30px
+  padding: 30px;
 }
 
-/* COMMON */
-.row::after {
-  content: '';
-  display: table;
-  clear: both;
+#why .row h1 {
+  margin-top: 30px;
+  margin-bottom: 0;
 }
 
-.container.grey {
+.container-style.grey {
   background-color: #f9f9f9;
 }
 
 img {
   height: 200px;
+  margin: 30px;
 }
 
-.clear {
-  clear: both;
+h1 {
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
