--- a/css/12bool.css
+++ b/css/12bool.css
@@ -9,7 +9,7 @@
   clear: both;
 }
 
-/* responsive telephone XS */
+/* XS */
 @media screen and (max-width: 768px) {
   .col-xs-1 {
     width: calc((100% / 12) * 1);
@@ -59,7 +59,7 @@
     width: calc((100% / 12) * 12);
   }
 
-  /* offset responsive telephone XS */
+  /* offset  XS */
   .col-xs-offset-1 {
     margin-left: calc((100% / 12) * 1);
   }
@@ -105,7 +105,7 @@
   }
 }
 
-/* responsive tablet md */
+/*  md */
 @media screen and (min-width: 769px) and (max-width: 992px) {
   .col-md-1 {
     width: calc((100% / 12) * 1);
@@ -155,7 +155,7 @@
     width: calc((100% / 12) * 12);
   }
 
-  /* offset responsive tablet md */
+  /* offset  md */
   .col-md-offset-1 {
     margin-left: calc((100% / 12) * 1);
   }
@@ -201,7 +201,7 @@
   }
 }
 
-/* responsive desktop lg */
+/*  lg */
 @media screen and (min-width: 993px) {
   .col-lg-1 {
     width: calc((100% / 12) * 1);
