--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,34 @@
-*{
-  padding: 0;
+* {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 
-/* BLOCCO LEZIONI */
-#lezioni .row img {
+#lezioni .container img {
   /* per centrare orizzontalmente */
   display: block;
   margin-right: auto;
   margin-left: auto;
 }
 
-#lezioni {
-  text-align: center;
-}
-
-#steps {
-  text-align: center;
-}
-
-/* BLOCCO PERCHE */
+#lezioni,
+#steps,
 #why {
   text-align: center;
+  margin-top: 100px;
 }
 
-#why .row>.first,
-#why .row>.second,
-#why .row>.third {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-#why .row img {
+#why .container img {
   background-color: #428bca;
   border-radius: 50%;
   padding: 30px;
 }
 
-#why .row h1 {
-  margin-top: 30px;
-  margin-bottom: 0;
-}
-
-.container-style.grey {
+.container.grey {
   background-color: #f9f9f9;
 }
 
 img {
   height: 200px;
-  margin: 30px;
-}
-
-h1 {
-  margin-top: 30px;
-  margin-bottom: 10px;
 }
